# EAG-TheShadowCloneAI

./: .gitignore  main.py  pyproject.toml
S8/: env_example  pyproject.toml  test_gema_image.py  test_ollama.py
S8/backup_files/: main.py  search_api.py
S8/resources/documents/: b891f853-ef6e-49f8-8817-ce07321292a2.txt
S8/resources/faiss_index/: doc_index_cache.json  metadata.json
S8/shared_code_tsai/: agent.py  models.py
S8/shared_code_tsai/config/: profiles.yaml
S8/shared_code_tsai/core/: session.py
S8/src/: temp.py
S8/src/common/config/: models.json  profiles.yaml
S8/src/common/logger/: logger.py
S8/src/core/agent/: agent.py
S8/src/core/agent/common/: context.py  loop.py  session.py
S8/src/core/agent/common/llm/: llm.py  model_manager.py  model_manager_new.py
S8/src/core/resources/memory_store/: agent_memory_index.faiss  agent_memory_metadata.pkl
S8/src/server/example3/: example3.py
S8/src/server/math_server/: math_server.py
S8/src/server/math_server/schema/: math_model.py
S8/src/server/programming_server/: programming_server.py
S8/src/server/programming_server/schema/: programming_model.py
S8/src/server/rag_server/: rag_server.py
S8/src/server/rag_server/common/: content_extracter.py  utils.py
S8/src/server/rag_server/schema/: rag_model.py
S8/src/server/websearch_server/: websearch_server.py
S8/src/web/api/v1/: agent_api.py  rag_api.py  rag_api_copy.py
S8/temp/resources/faiss_index/: metadata.json
S8/temp/resources/memory_store/: agent_memory_metadata.pkl
S8/vectordb-assistant/: background.js  manifest.json
(+82 files in other folders)
