[project]
name = "eag-theshadowcloneai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.9.0",
    "mcp>=1.6.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "pywin32>=310",
    "pywinauto>=0.6.9",
]
